[workspace]
resolver = "2"
members = [
    "crates/crypto",
    "crates/ledger",
    "crates/consensus",
    "crates/node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["SmartLedger"]
repository = "https://github.com/smartledger/smartledger-chain"

[workspace.dependencies]
# Post-quantum: FIPS 204 ML-DSA (Dilithium), pure Rust.
fips204 = "0.4.6"
# Quantum-resistant hashing.
sha3 = "0.10"
# Serialization for portable, offline-verifiable proofs.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "2"

# Internal crates
slc-crypto = { path = "crates/crypto" }
slc-ledger = { path = "crates/ledger" }
slc-consensus = { path = "crates/consensus" }

[profile.release]
lto = true
codegen-units = 1
