[package]
name = "slc-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "slc_node"
path = "src/lib.rs"

[[bin]]
name = "slc-node"
path = "src/bin/slc-node.rs"

[[bin]]
name = "slc"
path = "src/bin/slc.rs"

[dependencies]
slc-crypto.workspace = true
slc-ledger.workspace = true
slc-consensus.workspace = true
slc-anchor.workspace = true
slc-license.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true

[features]
# Enables the BSV/notaryhash anchor backend end to end from the node.
notaryhash = ["slc-anchor/notaryhash"]
